[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asciimath-text-renderer = { version = "0.1.0", path = "../asciimath-text-renderer" }
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
